--- a/portfolio-primus/index.html
+++ b/portfolio-primus/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/monogram-hq.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Primus - Empowering Your Business</title>
   </head>
