--- a/portfolio-primus/index.html
+++ b/portfolio-primus/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/monogram-hq.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- In public/index.html -->
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;700&display=swap" rel="stylesheet">
     <title>Primus - Empowering Your Business</title>
   </head>
   <body>
