--- a/portfolio-primus/index.html
+++ b/portfolio-primus/index.html
@@ -7,6 +7,16 @@
     <!-- In public/index.html -->
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;700&display=swap" rel="stylesheet">
     <title>Primus - Empowering Your Business</title>
+    <!-- META_TAGS_START -->
+    <meta property="og:title" content="PROJECT 01" />
+    <meta property="og:description" content="An innovative web application that revolutionizes user experience through cutting-edge design and seamless functionality. Built with modern technologies and best practices in mind." />
+    <meta property="og:image" content="https://images.unsplash.com/photo-1460925895917-afdab827c52f?auto=format&fit=crop&q=80&w=2015" />
+    <meta property="og:type" content="website" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="PROJECT 01" />
+    <meta name="twitter:description" content="An innovative web application that revolutionizes user experience through cutting-edge design and seamless functionality. Built with modern technologies and best practices in mind." />
+    <meta name="twitter:image" content="https://images.unsplash.com/photo-1460925895917-afdab827c52f?auto=format&fit=crop&q=80&w=2015" />
+    <!-- META_TAGS_END -->
   </head>
   <body>
     <div id="root"></div>
