--- a/portfolio-primus/index.html
+++ b/portfolio-primus/index.html
@@ -8,13 +8,13 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;700&display=swap" rel="stylesheet">
     <title>Primus - Empowering Your Business</title>
     <!-- META_TAGS_START -->
-    <meta property="og:title" content="CollabSync Project" />
-    <meta property="og:description" content="Created a real-time collaboration platform for remote teams facing communication and project management challenges. The tool combined instant messaging, task tracking, and document sharing in a unified interface, enabling teams to stay connected and productive. We leveraged WebSockets to ensure seamless real-time interactions and integrated popular productivity tools to enhance workflow efficiency. The solution significantly improved team coordination, reducing the reliance on multiple disconnected apps." />
+    <meta property="og:title" content="BizFlow" />
+    <meta property="og:description" content="Developed a cloud-based business management solution tailored for small and medium enterprises struggling with inefficient workflows. The platform provided streamlined inventory management, automated invoicing, and a centralized CRM system, allowing businesses to enhance their operational efficiency. By integrating real-time analytics and role-based access control, we empowered business owners to make data-driven decisions while ensuring data security and team collaboration." />
     <meta property="og:image" content="https://images.unsplash.com/photo-1557838923-2985c318be48?auto=format&fit=crop&q=80&w=2015" />
     <meta property="og:type" content="website" />
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="CollabSync Project" />
-    <meta name="twitter:description" content="Created a real-time collaboration platform for remote teams facing communication and project management challenges. The tool combined instant messaging, task tracking, and document sharing in a unified interface, enabling teams to stay connected and productive. We leveraged WebSockets to ensure seamless real-time interactions and integrated popular productivity tools to enhance workflow efficiency. The solution significantly improved team coordination, reducing the reliance on multiple disconnected apps." />
+    <meta name="twitter:title" content="BizFlow" />
+    <meta name="twitter:description" content="Developed a cloud-based business management solution tailored for small and medium enterprises struggling with inefficient workflows. The platform provided streamlined inventory management, automated invoicing, and a centralized CRM system, allowing businesses to enhance their operational efficiency. By integrating real-time analytics and role-based access control, we empowered business owners to make data-driven decisions while ensuring data security and team collaboration." />
     <meta name="twitter:image" content="https://images.unsplash.com/photo-1557838923-2985c318be48?auto=format&fit=crop&q=80&w=2015" />
     <!-- META_TAGS_END -->
   </head>
