--- a/portfolio-primus/index.html
+++ b/portfolio-primus/index.html
@@ -8,14 +8,14 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;700&display=swap" rel="stylesheet">
     <title>Primus - Empowering Your Business</title>
     <!-- META_TAGS_START -->
-    <meta property="og:title" content="BizFlow" />
-    <meta property="og:description" content="Developed a cloud-based business management solution tailored for small and medium enterprises struggling with inefficient workflows. The platform provided streamlined inventory management, automated invoicing, and a centralized CRM system, allowing businesses to enhance their operational efficiency. By integrating real-time analytics and role-based access control, we empowered business owners to make data-driven decisions while ensuring data security and team collaboration." />
-    <meta property="og:image" content="https://images.unsplash.com/photo-1557838923-2985c318be48?auto=format&fit=crop&q=80&w=2015" />
+    <meta property="og:title" content="Kanban Board" />
+    <meta property="og:description" content="Kanban Board is a simple task management tool that allows users to create tasks and track their progress. Tasks can be easily dragged and dropped between three columns: To Do, In Progress, and Completed. This visual approach helps users stay organized and efficiently track their workflow." />
+    <meta property="og:image" content="https://primusteam.netlify.app/KanbanBoard/screenshot1.jpg" />
     <meta property="og:type" content="website" />
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="BizFlow" />
-    <meta name="twitter:description" content="Developed a cloud-based business management solution tailored for small and medium enterprises struggling with inefficient workflows. The platform provided streamlined inventory management, automated invoicing, and a centralized CRM system, allowing businesses to enhance their operational efficiency. By integrating real-time analytics and role-based access control, we empowered business owners to make data-driven decisions while ensuring data security and team collaboration." />
-    <meta name="twitter:image" content="https://images.unsplash.com/photo-1557838923-2985c318be48?auto=format&fit=crop&q=80&w=2015" />
+    <meta name="twitter:title" content="Kanban Board" />
+    <meta name="twitter:description" content="Kanban Board is a simple task management tool that allows users to create tasks and track their progress. Tasks can be easily dragged and dropped between three columns: To Do, In Progress, and Completed. This visual approach helps users stay organized and efficiently track their workflow." />
+    <meta name="twitter:image" content="https://primusteam.netlify.app/KanbanBoard/screenshot1.jpg" />
     <!-- META_TAGS_END -->
   </head>
   <body>
